Daniil_Shauchenka/16.Monitoring/prometheus-stack/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.k8s-17.sa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-kube-prometheus-alertmanager
                port:
                  number: 9093
